--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
+    "@react-native-community/masked-view": "^0.1.9",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
     "apollo-boost": "^0.4.7",
     "expo": "~37.0.3",
     "expo-secure-store": "^8.1.0",
@@ -17,10 +20,11 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.4",
-    "react-native-gesture-handler": "~1.6.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.7.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7"
   },
