--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "^2.4.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "~0.11.7",
-    "react-relay": "^9.0.0"
+    "react-relay": "^9.0.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.20"
   },
   "devDependencies": {
     "@babel/core": "~7.8.6",
