--- a/app.json
+++ b/app.json
@@ -1,15 +1,4 @@
 {
   "name": "HomeApp",
-  "displayName": "Home",
-  "expo": {
-    "name": "HomeApp",
-    "slug": "expo-template-bare",
-    "version": "1.0.0",
-    "icon": "./assets/icon.png",
-    "platforms": ["ios", "android"],
-    "assetBundlePatterns": ["**/*"],
-    "android": {
-      "package": "com.alexandergherardi.home"
-    }
-  }
+  "displayName": "HomeApp"
 }
