--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.3.0",
+    "@react-navigation/native-stack": "^5.0.5",
     "@react-navigation/stack": "^5.3.2",
     "babel-plugin-relay": "^9.1.0",
     "react": "^16.13.1",
@@ -25,6 +26,9 @@
     "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-zeroconf": "^0.12.2",
+    "react-navigation": "^4.3.9",
+    "react-navigation-slide-from-right-transition": "^1.0.4",
+    "react-navigation-stack": "^2.4.0",
     "react-relay": "^9.1.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20",
     "relay-compiler-language-typescript": "^12.0.2"
@@ -36,6 +40,7 @@
     "@types/jest": "^24.0.24",
     "@types/react-native": "^0.62.0",
     "@types/react-native-zeroconf": "^0.11.0",
+    "@types/react-relay": "^7.0.7",
     "@types/react-test-renderer": "16.9.2",
     "@types/relay-runtime": "^8.0.9",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
