--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-zeroconf": "^0.12.2",
     "react-navigation": "^4.3.9",
