--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "react-dom": "^16.13.1",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-keychain": "^6.0.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-sensitive-info": "^5.5.5",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-zeroconf": "^0.12.2",
