Fix bottom sheet

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.3.0",
     "@react-navigation/native-stack": "^5.0.5",
     "@react-navigation/stack": "^5.3.2",
+    "alexander-gherardi-mesh-crypto": "file:../RnMeshCryptro",
     "babel-plugin-relay": "^9.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,8 +36,7 @@
     "react-navigation-stack": "^2.4.0",
     "react-relay": "^9.1.0",
     "reanimated-bottom-sheet": "^1.0.0-alpha.20",
-    "relay-compiler-language-typescript": "^12.0.2",
-    "alexander-gherardi-mesh-crypto": "file:../RnMeshCryptro"
+    "relay-compiler-language-typescript": "^12.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
