--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-ble-plx": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-paper": "^3.10.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
@@ -35,7 +36,6 @@
     "react-navigation-slide-from-right-transition": "^1.0.4",
     "react-navigation-stack": "^2.4.0",
     "react-relay": "^9.1.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.20",
     "relay-compiler-language-typescript": "^12.0.2"
   },
   "devDependencies": {
