--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^5.5.5",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-zeroconf": "^0.12.2",
     "react-navigation": "^4.3.9",
