--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "HomeApp",
-  "version": "0.0.1",
+  "name": "home",
+  "version": "1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
