--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Build Android Release
         run: |
           cd android && ./gradlew assembleRelease
+            -RELEASE_KEY_PASSWORD='${{ secrets.RELEASE_KEY_PASSWORD }}'
+            -RELEASE_STORE_PASSWORD='${{ secrets.RELEASE_STORE_PASSWORD }}'
       # Upload to Artifact
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
