--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,7 @@ jobs:
         # Build Command
       - name: Build Android Release
         run: |
-          cd android && ./gradlew assembleRelease
-            -PRELEASE_KEY_PASSWORD='${{ secrets.RELEASE_KEY_PASSWORD }}'
-            -PRELEASE_STORE_PASSWORD='${{ secrets.RELEASE_STORE_PASSWORD }}'
+          cd android && ./gradlew assembleRelease -PRELEASE_KEY_PASSWORD='${{ secrets.RELEASE_KEY_PASSWORD }}' -PRELEASE_STORE_PASSWORD='${{ secrets.RELEASE_STORE_PASSWORD }}'
       # Upload to Artifact
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
